# polymarket-insider-detector

./: .env.example  .gitignore  README.md  check_progress.bat  check_status.bat  pyproject.toml  requirements.txt  run_ingestion_loop.bat  setup_ngrok.bat  start_dashboard.bat  stop_dashboard.bat
.claude/: settings.local.json
doc/: WALLET_LINKING_IMPLEMENTATION.md  polymarket-insider-detector-plan.md
scripts/: detect_clusters.py  ingest.py  migrate_add_eoa.py  monitor.py  score.py
src/: config.py
src/alerts/: discord.py  monitor.py
src/analysis/: cluster_detector.py  stats.py  wallet_scorer.py
src/dashboard/: app.py
src/data/: allium_client.py  database.py  dns_resolver.py  duckdb_writer.py  polymarket_client.py  subgraph_client.py  websocket_client.py
